@@ -109,8 +109,9 @@ public:
 	~CItem();
 
 	// CTreeListItem Interface
-	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol = CLR_NONE) const;
+	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const;
 	virtual CString GetText(int subitem) const;
+	virtual COLORREF GetItemTextColor() const;
 	virtual int CompareSibling(const CTreeListItem *tlib, int subitem) const;
 	virtual int GetChildrenCount() const;
 	virtual CTreeListItem *GetTreeListChild(int i) const;
@@ -225,6 +226,9 @@ private:
 
 
 // $Log$
+// Revision 1.9  2004/11/12 00:47:42  assarbad
+// - Fixed the code for coloring of compressed/encrypted items. Now the coloring spans the full row!
+//
 // Revision 1.8  2004/11/08 00:46:26  assarbad
 // - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
 //   Same rules apply. (Green = encrypted / Blue = compressed)
